tests/reference/asr-fixed_form_call3-8c7b642.stderr
syntax error: Token ')' is unexpected here
 --> tests/fixed_form_call3.f:5:43
  |
5 |         call prinf('16m+70 = *',16*m+70,1))
  |                                           ^ 
